@@ -1,3 +1,14 @@
+2003-03-05  Mark Page  <mpagenva@aol.com>
+
+	* nsd/adpcmds.c: 
+	* nsd/adpeval.c:
+	* nsd/nsd.h: (patch) Added optional switches to ns_adp_parse;
+	-cwd <path>, -savedresult <varname>
+	-savedresult supports usages which require the adp script's result
+	separate from the output buffer (which is the func result)
+	-cwd supports prespecifying the initial cwd for which the script
+	will be executed.
+
 2003-03-03 Nathan Folkman <shmooved@aol.com>
 
         * nscgi/nscgi.c: (patch) Applied patch to set SCRIPT_NAME 
